changed index file to another one

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
-<body id="home">
+<body id="home" class="st-get-sidebar">
   <!-- Start Header Section -->
-  <header class="st-site-header st-style1 st-sticky-header">
+  <header class="st-site-header st-style2 st-sticky-header">
     <div class="st-main-header">
       <div class="container">
         <div class="st-main-header-in">
           <div class="st-main-header-left">
-            <a class="st-site-branding" href="index.html"><img src="assets/img/logo.png" alt="Davis"></a>
+            <div class="st-header-author"><img src="assets/img/section/hero-img.jpg" alt=""></div>
           </div>
           <div class="st-main-header-right">
             <div class="st-nav">
@@ -39,15 +39,8 @@
                 <li><a href="#blog" class="st-smooth-move">Blog</a></li>
                 <li><a href="#contact" class="st-smooth-move">Contact</a></li>
               </ul>
-              <div class="sp-phone">
-                <svg viewBox="0 0 513.64 513.64">
-                  <g>
-                    <g>
-                      <path d="M499.66,376.96l-71.68-71.68c-25.6-25.6-69.12-15.359-79.36,17.92c-7.68,23.041-33.28,35.841-56.32,30.72c-51.2-12.8-120.32-79.36-133.12-133.12c-7.68-23.041,7.68-48.641,30.72-56.32c33.28-10.24,43.52-53.76,17.92-79.36l-71.68-71.68c-20.48-17.92-51.2-17.92-69.12,0l-48.64,48.64c-48.64,51.2,5.12,186.88,125.44,307.2c120.32,120.32,256,176.641,307.2,125.44l48.64-48.64C517.581,425.6,517.581,394.88,499.66,376.96z" />
-                    </g>
-                  </g>
-                </svg>
-                <div class="sp-phone-no">+1 971 234 1508</div>
+              <div class="st-hero-btn">
+                <a href="#contact" class="st-btn st-style2 st-color1 st-btn-md st-smooth-move">Hire me</a>
               </div>
             </div>
           </div>
@@ -58,44 +51,35 @@
   <!-- End Header Section -->
 
   <!-- Start Hero Seciton -->
-  <div class="st-height-b80 st-height-lg-b80"></div>
-  <section class="st-hero-wrap st-parallax">
-    <div class="st-hero st-style1 st-ripple-version">
-      <div class="container">
-        <div class="st-hero-text">
-          <h3>Hello, I’m</h3>
-          <h1>Edward <br>Davis
-          </h1>
-          <h2>Visual Designer</h2>
-          <div class="st-hero-btn">
-            <a href="#contact" class="st-btn st-style1 st-color1 st-smooth-move">Hire me</a>
-          </div>
+  <section class="st-hero st-style2">
+    <div class="container">
+      <div class="st-hero-text">
+        <h1>Hi, I am <span>Jhon Doe</span></h1>
+        <p>I am a frontend web developer. I can provide clean code and pixel perfect design. <br>I also make website more & more interactive with web animations.</p>
+        <div class="st-hero-social-links">
+          <a href="#" class="st-social-btn">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="st-social-btn">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="st-social-btn">
+            <i class="fab fa-github"></i>
+          </a>
         </div>
       </div>
     </div>
-    <!-- Hero Image - Social Link Group -->
-    <div class="st-hero-img st-to-right">
-      <img class="wow fadeInRight" src="assets/img/section/hero-img.jpg" alt="Hero">
-      <div class="st-social-group wow fadeInLeft">
-        <div class="st-social-link">
-          <a href="#" class="st-social-btn active">
-            <span class="st-social-icon"><i class="fab fa-dribbble"></i></span>
-            <span class="st-icon-name">Dribbble</span>
-          </a>
-          <a href="#" class="st-social-btn">
-            <span class="st-social-icon"><i class="fab fa-behance"></i></span>
-            <span class="st-icon-name">Behance</span>
-          </a>
-          <a href="#" class="st-social-btn">
-            <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
-            <span class="st-icon-name">Twitter</span>
-          </a>
-          <a href="#" class="st-social-btn">
-            <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
-            <span class="st-icon-name">LinkedIn</span>
-          </a>
-        </div>
-      </div>
+    <div id="background-wrap">
+      <div class="bubble x1"></div>
+      <div class="bubble x2"></div>
+      <div class="bubble x3"></div>
+      <div class="bubble x4"></div>
+      <div class="bubble x5"></div>
+      <div class="bubble x6"></div>
+      <div class="bubble x7"></div>
+      <div class="bubble x8"></div>
+      <div class="bubble x9"></div>
+      <div class="bubble x10"></div>
     </div>
     <div id="particles-js"></div>
   </section>
@@ -425,7 +409,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Photoshop</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">95%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">95%</div>
               </div>
               <div class="st-progressbar" data-progress="95">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -435,7 +420,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Motion Graphic</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">75%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">75%</div>
               </div>
               <div class="st-progressbar" data-progress="75">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -445,7 +431,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Adobe XD</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">90%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">90%</div>
               </div>
               <div class="st-progressbar" data-progress="90">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -455,7 +442,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">UX Design</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">85%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">85%</div>
               </div>
               <div class="st-progressbar" data-progress="85">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -465,7 +453,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">HTML</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">80%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">80%</div>
               </div>
               <div class="st-progressbar" data-progress="80">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -475,7 +464,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Digital Marketing</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">90%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s"
+                    data-wow-delay="0.5s">90%</div>
               </div>
               <div class="st-progressbar" data-progress="90">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -876,7 +866,7 @@
                 <div class="st-post-info">
                   <div class="st-post-date">
                     By:
-                    <a href="blog-details.html" class="st-post-author">Admin</a>
+                    <a href="#" class="st-post-author">Admin</a>
                     <span class="st-post-date-divider">|</span>
                     <span class="st-post-publish-date">27-09-2020</span>
                   </div>
@@ -1085,9 +1075,7 @@
   <script src="assets/js/jquery.slick.min.js"></script>
   <script src="assets/js/lightgallery.min.js"></script>
   <script src="assets/js/wow.min.js"></script>
-  <script src="assets/js/ripples.min.js"></script>
   <script src="assets/js/particles.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
-
 </html>
