changed to brand colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Page Title -->
-  <title>Davis - Personal Portfolio</title>
+  <title>Rasulov - Digital Marketing Agency</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.png" />
   <!-- Stylesheets -->
@@ -54,7 +54,7 @@
   <section class="st-hero st-style2">
     <div class="container">
       <div class="st-hero-text">
-        <h1>Hi, I am <span>Jhon Doe</span></h1>
+        <h1>Никакой магии! <br><span> Просто интернет реклама!</span></h1>
         <p>I am a frontend web developer. I can provide clean code and pixel perfect design. <br>I also make website more & more interactive with web animations.</p>
         <div class="st-hero-social-links">
           <a href="#" class="st-social-btn">
