--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
 </head>
 
 <body id="home" class="st-get-sidebar">
+<!--modal for application-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document" style="height: 100%;
+    margin-top: 0;">
+      <div class="modal-content" id="dataContent" style="height:100vh;">
+
+        
+      </div>
+    </div>
+</div>
+
+
   <!-- Start Header Section -->
   <header class="st-site-header st-style2 st-sticky-header">
     <div class="st-main-header">
@@ -871,7 +884,7 @@
 
         <div class="col-lg-12 d-flex justify-content-center" >
           <div class="st-height-b50 st-height-lg-b30"></div>
-          <button style="margin-top: 30px;" class="st-btn st-style1 st-color1" type="submit" id="submit" name="submit">Оставить заявку</button>
+          <button style="margin-top: 30px;" class="st-btn st-style1 st-color1"  type="button" id="apply-btn" data-toggle="modal" data-target="#exampleModal">Оставить заявку</button>
         </div>
       </div>
     </div>
@@ -890,11 +903,22 @@
   <!-- End Footer Seciton -->
 
   <!-- Scripts -->
+
   <script src="assets/js/jquery-1.12.4.min.js"></script>
   <script src="assets/js/jquery.slick.min.js"></script>
   <script src="assets/js/lightgallery.min.js"></script>
   <script src="assets/js/wow.min.js"></script>
   <script src="assets/js/particles.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script>
+    $(document).ready( function() {
+$("#apply-btn").on("click", function() {
+  console.log("script is running");
+  $("#dataContent").load("modal.html");
+});
+
+});		
+
+  </script>
 </body>
 </html>
