changed modal layout to fill the popup

--- a/modal.html
+++ b/modal.html
@@ -1,5 +1,5 @@
-<div class="modal-body" style="height:100%; overflow:scroll; -webkit-overflow-scrolling:touch;">
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWmeSgRGP3J-6H8EV8xFnr7JykB6vixisSFBNlUMOXSnL5Zw/viewform?embedded=true" width="640" height="1133" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+<div class="modal-body" style="height:100%; overflow:none; -webkit-overflow-scrolling:touch;">
+  <iframe loading="eager" src="https://docs.google.com/forms/d/e/1FAIpQLSfWmeSgRGP3J-6H8EV8xFnr7JykB6vixisSFBNlUMOXSnL5Zw/viewform?embedded=true"  width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
   </div>
   <style>
   @media screen and (max-width: 767px) {
