--- a/modal.html
+++ b/modal.html
@@ -9,6 +9,6 @@
 }
   </style>
   <div class="modal-footer safari_only" >
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+    <button type="button" class="btn btn-dark" data-dismiss="modal">Закрыть</button>
 
   </div>
