fixed bug with images

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
             <div class="st-portfolio-item">
               
                 <div class="st-portfolio-img">
-                  <img src="assets/img/partners/vegapharm.png"  alt="portfolio">
+                  <img src="assets/img/partners/Vegapharm.png"  alt="portfolio">
                 </div>
                <!-- <div class="st-portfolio-item-hover">
                   <i class="fas fa-plus-circle"></i>
@@ -730,7 +730,7 @@
             <div class="st-portfolio-item">
               
                 <div class="st-portfolio-img">
-                  <img src="assets/img/partners/dc.png"  alt="portfolio">
+                  <img src="assets/img/partners/DC.png"  alt="portfolio">
                 </div>
                <!-- <div class="st-portfolio-item-hover">
                   <i class="fas fa-plus-circle"></i>
@@ -863,7 +863,7 @@
               <div class="st-single-info-details">
                 <h4>Адрес</h4>
                 <span>Таджикистан, город Душанбе,<br>
-                  Носир Мухаммад 5/5 (БЦ “Регус”)
+                 ул. Носир Мухаммад 5/5 (БЦ “Регус”)
                   </span>
               </div>
             </div>
