menu items working

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               <ul class="st-nav-list st-onepage-nav">
                 <li><a href="#home" class="st-smooth-move">Главная</a></li>
                 <li><a href="#about" class="st-smooth-move">О Нас</a></li>
-                <li><a href="#resume" class="st-smooth-move">Какая реклама?</a></li>
-                <li><a href="#portfolio" class="st-smooth-move">Предложение</a></li>
-                <li><a href="#blog" class="st-smooth-move">Почему мы?</a></li>
-                <li><a href="#blog" class="st-smooth-move">Примеры рекламы</a></li>
+                <li><a href="#whatAd" class="st-smooth-move">Какая реклама?</a></li>
+                <li><a href="#offer" class="st-smooth-move">Предложение</a></li>
+                <li><a href="#whyus" class="st-smooth-move">Почему мы?</a></li>
+                <li><a href="#ads" class="st-smooth-move">Примеры рекламы</a></li>
                
               </ul>
               <div class="st-hero-btn">
@@ -65,7 +65,7 @@
   <!-- End Header Section -->
 
   <!-- Start Hero Seciton -->
-  <section class="st-hero st-style2">
+  <section id="home" class="st-hero st-style2">
     <div class="container">
       <div class="st-hero-text">
         <h1>Никакой магии! <br><span> Просто интернет реклама!</span></h1>
@@ -152,7 +152,7 @@
   <!-- End About Seciton -->
 
   <!-- Start Service Seciton -->
-  <section>
+  <section id="whatAd">
     <div class="st-height-b100 st-height-lg-b80"></div>
     <div class="container">
       <div class="st-section-heading st-style1">
@@ -315,7 +315,7 @@
   <!-- End Service Seciton -->
 
   <!-- Start Skill Seciton -->
-  <section class="st-dark-bg">
+  <section id="offer" class="st-dark-bg">
     <div class="st-height-b100 st-height-lg-b80"></div>
     <div class="container">
       <div class="st-section-heading st-style1">
@@ -532,7 +532,7 @@
   <!-- End Skill Seciton -->
 
     <!-- Start About Seciton -->
-    <section id="about" class="st-about-wrap">
+    <section id="whyus" class="st-about-wrap">
       <div class="st-height-b100 st-height-lg-b80"></div>
       <div class="container">
         <div class="st-section-heading st-style1">
@@ -574,7 +574,7 @@
     <!-- End About Seciton -->
 
   <!-- Start Portfolio Seciton -->
-  <section id="portfolio">
+  <section id="ads">
     <div class="st-height-b100 st-height-lg-b80"></div>
     <div class="container">
       <div class="st-section-heading st-style1">
