changed text social network

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
               </div>
             </div>
             <div class="st-social-info">
-              <div class="st-social-text">Свяжитесь с нами в соц. сетях</div>
+              <div class="st-social-text">Свяжитесь с нами в соцсетях</div>
               <div class="st-social-link">
                 <a href="https://www.facebook.com/rasulov.agency" class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-facebook-f"></i></span>
