changed fill orm button font family

--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
 
         <div class="col-lg-12 d-flex justify-content-center" >
           <div class="st-height-b50 st-height-lg-b30"></div>
-          <button style="margin-top: 30px;" class="st-btn st-style1 st-color1"  type="button" id="apply-btn" data-toggle="modal" data-target="#exampleModal">Оставить заявку</button>
+          <button style="margin-top: 30px; font-family: 'Evolventa';" class="st-btn st-style1 st-color1"  type="button" id="apply-btn" data-toggle="modal" data-target="#exampleModal">Оставить заявку</button>
         </div>
       </div>
     </div>
