last fucking changes from fucking rasulov

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 wow fadeInLeft">
+        <div class="col-lg-6 wow fadeInLeft" style="text-align: center;">
           <div class="st-about-img-wrap">
            
             <img class=" st-dynamic-bg st-bg custom-photo-padding" src="assets/img/section/about-n.jpg" />
@@ -593,7 +593,7 @@
 
   <!-- Start Skill Seciton -->
   <section class="st-dark-bg">
-    <div class="st-height-b100 st-height-lg-b80 "></div>
+    <div class="st-height-b100 st-height-lg-b0 "></div>
     
 
     <div class="container">
@@ -735,7 +735,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 wow fadeInRight">
+          <div class="col-lg-6 wow fadeInRight " style="text-align: center;">
             <div class="st-about-img-wrap">
               <img class="custom-photo-padding st-dynamic-bg st-bg" style="object-fit: cover;" src="assets/img/section/why.jpg" />
             </div>
