map phone email changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Rasulov Ditital Agency">
+  <meta name="author" content="Rasulov Digital Agency">
   <!-- Page Title -->
   <title>Rasulov Digital Agency</title>
   <!-- Favicon Icon -->
@@ -18,6 +18,15 @@
   <link rel="stylesheet" href="assets/css/lightgallery.min.css" />
   <link rel="stylesheet" href="assets/css/animate.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LF1HEC44F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3LF1HEC44F');
+</script>
 </head>
 
 <body id="home" class="st-get-sidebar">
@@ -312,7 +321,7 @@
                     <div class="row">
                       <div class="col-lg-4 col-md-4 col-4">
                         <img class="st-portfolio-img " style="width: 75%; object-fit: contain; margin: 5px;" src="assets/img/where/FB Messenger.png" />
-                        <div class="st-iconbox-text">Messanger</div>
+                        <div class="st-iconbox-text">Messenger</div>
                       </div>
                       <div class="col-lg-4 col-md-4 col-4">
                         <img class="st-portfolio-img " style="width: 75%; object-fit: contain; margin: 5px;" src="assets/img/where/IMO.png" />
@@ -467,7 +476,7 @@
             <div class="row">
               <div class="col-lg-4 col-md-4 col-4">
                 <img class="st-portfolio-img " style="width: 75%; object-fit: contain; margin: 5px;" src="assets/img/where/FB Messenger.png" />
-                <div class="st-iconbox-text">Messanger</div>
+                <div class="st-iconbox-text">Messenger</div>
               </div>
               <div class="col-lg-4 col-md-4 col-4">
                 <img class="st-portfolio-img " style="width: 75%; object-fit: contain; margin: 5px;" src="assets/img/where/IMO.png" />
@@ -954,7 +963,7 @@
 
         <div class="col-lg-6">
           <div class="map-responsive">
-            <iframe style="filter: invert(90%)" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12613.678506097356!2d68.79817381386232!3d38.56946166597891!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x615b5cd6560fe650!2sRegus%20-%20Dushanbe%2C%20Opera%20%26%20Ballet!5e0!3m2!1sen!2s!4v1631280893508!5m2!1sen!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="eager"></iframe>
+            <iframe style="filter: invert(90%)" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12477.798081089235!2d68.7982018!3d38.569495!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2105d8d26ce473f0!2sRasulov%20Digital%20Agency!5e0!3m2!1sen!2s!4v1632287461176!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="eager"></iframe>
           </div>
         </div>
         <div class="st-height-b0 st-height-lg-b30"></div>
@@ -970,14 +979,14 @@
               <i class="fas fa-envelope"></i>
               <div class="st-single-info-details">
                 <h4>Email</h4>
-                <a href="#">info@rasulov.digital</a>
+                <a href="mailto:hi@rasulov.digital">hi@rasulov.digital</a>
               </div>
             </div>
             <div class="st-single-contact-info">
               <i class="fas fa-phone-alt"></i>
               <div class="st-single-info-details">
                 <h4>Телефон</h4>
-                <span>+992 94 00 00 911</span>
+                <a href="tel:+992940000911"><span>+992 94 00 00 911</span></a>
               </div>
             </div>
             <div class="st-single-contact-info">
